--- a/src/index.css
+++ b/src/index.css
@@ -224,19 +224,21 @@ input:focus {
 /* FIX: Remove position: absolute to keep about icon at the bottom of the
  * document */
 .about-link {
-  display: flex;
-  justify-content: flex-end;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  margin: 5px 10px;
 }
 
 /* FIX: Remove position: absolute to keep about icon at the bottom of the
  * document */
 .about-link a {
-  color: #fff;
+  color: var(--primaryFont);
   cursor: pointer;
 }
 
 .about-link a:hover {
-  color: #ff6a95;
+  color: var(--secondaryFont);
 }
 
 .about h1 {
@@ -245,6 +247,14 @@ input:focus {
 
 .about p {
   margin: 10px 0;
+}
+
+@media (max-width: 850px) {
+  .about-link {
+    position: unset;
+    display: flex;
+    justify-content: end;
+  }
 }
 
 @media (max-width: 600px) {
