--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,11 @@ body {
   line-height: 1.6;
 }
 
+a {
+  text-decoration: none;
+  color: var(--secondaryFont);
+}
+
 ul {
   list-style: none;
 }
@@ -238,6 +243,10 @@ input:focus {
 }
 
 .about-link a:hover {
+  color: var(--secondaryFont);
+}
+
+.active path {
   color: var(--secondaryFont);
 }
 
