--- a/src/index.css
+++ b/src/index.css
@@ -176,15 +176,17 @@ input:focus {
 .edit {
   position: absolute;
   top: 10px;
-  right: 20px;
+  right: 10px;
   cursor: pointer;
   background: none;
   border: none;
   color: var(--secondaryFont);
+  opacity: 0.7;
+  font-size: 1.25rem;
 }
 
 .edit {
-  right: 40px;
+  right: 35px;
 }
 
 .btn {
